--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+## v1.3.3 - 2021-06-16
+### Fixed
+- Alpine linux and Meson updates ruined build process. Now building should work again.
+
+
+## v1.3.2 - 2020-04-10
+### Fixed
+- MCSMan records swap due DNS cache.
+
+### Added
+- Option 'dns_cache' (default true). If false performs dns request every time otherwise caches dns requests.
+
+
 ## v1.3.1 - 2020-04-08
 ### Fixed
 - MCSMan records swap due DNS cache.
